@startuml

title __SERVICE's Class Diagram__\n

  namespace service {
    class service.JPDC {
        ~ organizationName : String
        + JPDC()
        + getName()
        + recieveRequest()
        + serveRequest()
        + setMediator()
        + toString()
    }
  }
  

  namespace service {
    class service.JRTA {
        ~ organizationName : String
        + JRTA()
        + getName()
        + recieveRequest()
        + serveRequest()
        + setMediator()
        + toString()
    }
  }
  

  namespace service {
    class service.JRTC {
        ~ organizationName : String
        + JRTC()
        + getName()
        + recieveRequest()
        + serveRequest()
        + setMediator()
        + toString()
    }
  }
  

  namespace service {
    class service.JWSA {
        ~ organizationName : String
        + JWSA()
        + getName()
        + recieveRequest()
        + serveRequest()
        + setMediator()
        + toString()
    }
  }
  

  namespace service {
    interface service.Service {
        {abstract} + getName()
        {abstract} + recieveRequest()
        {abstract} + serveRequest()
        {abstract} + setMediator()
    }
  }
  

  service.JPDC .up.|> service.Service
  service.JPDC o-- mediator.Mediator : mediator
  service.JRTA .up.|> service.Service
  service.JRTA o-- mediator.Mediator : mediator
  service.JRTC .up.|> service.Service
  service.JRTC o-- mediator.Mediator : mediator
  service.JWSA .up.|> service.Service
  service.JWSA o-- mediator.Mediator : mediator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
